Converted S3 requests to HTTPS and fixed reference line contrast

--- a/client/src/components/reference/styles/tense.module.css
+++ b/client/src/components/reference/styles/tense.module.css
@@ -98,7 +98,7 @@
 }
 
 .subject-line__wrapper:nth-last-of-type( 2n ){
-    background-color: rgba( 255, 255, 255, 0.35 );
+    background-color: rgba( 255, 255, 255, 0.85 );
 }
 
 .subject-line__container{
